kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      name: "GitHub Webhook Receiver"
      group: External
spec:
  hostnames: ["flux-webhook.${PRIMARY_SECRET_DOMAIN}"]
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
